<resources>
    <string name="app_name">MrBudget</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_details">Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_history">History</string>
    <string name="expense">Expense</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="regular_expenses">Regular expenses</string>
    <string name="one_off_expenses">One-off expenses</string>
    <string name="savings">Savings</string>
    <string name="retirement">Retirement</string>
    <string name="pln_currency">PLN</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="total_income">Total Incomes</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="instructions_enable_dark_title">Dark Theme</string>

    <string name="groceries">Groceries</string>
    <string name="transport">Transport</string>
    <string name="health">Health</string>
    <string name="family">Family</string>
    <string name="gifts">Gifts</string>
    <string name="education">Education</string>
    <string name="home">Home</string>
    <string name="hobby">Hobby</string>
    <string name="select_category">Please select category</string>
    <string name="expense_hint">Expense name</string>
    <string name="income_hint">Income name</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>