<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_transactions">

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="pl.podwikagrzegorz.mrbudget.ui.transactions.TransactionFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/transaction_fragment" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="pl.podwikagrzegorz.mrbudget.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/details_fragment" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="pl.podwikagrzegorz.mrbudget.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/history_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="pl.podwikagrzegorz.mrbudget.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/settings_fragment" />

    <fragment
        android:id="@+id/navigation_expense"
        android:name="pl.podwikagrzegorz.mrbudget.ui.expense.ExpenseFragment"
        android:label="@string/expense"
        tools:layout="@layout/expense_fragment">

        <argument
            android:name="budgetId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history_details"
        android:name="pl.podwikagrzegorz.mrbudget.ui.history.HistoryDetailsFragment"
        tools:layout="@layout/cardview_piechart_expenses">
        <argument
            android:name="budgetId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>


</navigation>