<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_statistical"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/placeholder"
        android:title=""
        />

    <item
        android:id="@+id/navigation_history"
        android:title="@string/title_history"
        android:icon="@drawable/ic_history"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>