<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="expenseViewModel"
            type="pl.podwikagrzegorz.mrbudget.ui.expense.ExpenseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinator_expense_fragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/container_expenses"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_amount_of_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginTop="@dimen/keyline_4"
                android:layout_marginBottom="@dimen/keyline_4"
                android:layout_toStartOf="@+id/textView_pln"
                android:text="@{expenseViewModel.moneyAmountAsString}"
                android:textAppearance="?attr/textAppearanceHeadline4"
                tools:text="-155" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_pln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/keyline_2"
                android:layout_marginTop="@dimen/keyline_4"
                android:layout_marginEnd="@dimen/keyline_4"
                android:layout_marginBottom="@dimen/keyline_4"
                android:text="@string/pln_currency"
                android:textAppearance="?attr/textAppearanceHeadline4" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_pln">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabItem_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabItem_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income" />

            </com.google.android.material.tabs.TabLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_layout"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin_16"
                android:layout_below="@id/tabLayout"
                app:endIconMode="clear_text"
                android:hint="@string/expense_hint"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_name_of_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView_expense_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                android:layout_below="@id/textinput_layout"
                android:layout_margin="@dimen/keyline_5"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAddTransaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/keyline_4"
                app:fabVisibility="@{expenseViewModel.moneyAmountAsString}"
                app:srcCompat="@drawable/ic_check" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkGray"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8">

                <ImageView
                    android:id="@+id/imageView_seven"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onSevenClick()}"
                    app:srcCompat="@drawable/ic_seven" />

                <ImageView
                    android:id="@+id/imageView_eight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onEightClick()}"
                    app:srcCompat="@drawable/ic_eight" />

                <ImageView
                    android:id="@+id/imageView_nine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onNineClick()}"
                    app:srcCompat="@drawable/ic_nine" />

<!--                <ImageView-->
<!--                    android:id="@+id/imageView_division"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="0.25"-->
<!--                    app:srcCompat="@drawable/ic_division" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8">

                <ImageView
                    android:id="@+id/imageView_four"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onFourClick()}"
                    app:srcCompat="@drawable/ic_four" />

                <ImageView
                    android:id="@+id/imageView_five"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onFiveClick()}"
                    app:srcCompat="@drawable/ic_five" />

                <ImageView
                    android:id="@+id/imageView_six"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onSixClick()}"
                    app:srcCompat="@drawable/ic_six" />

<!--                <ImageView
                    android:id="@+id/imageView_multiplication"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    app:srcCompat="@drawable/ic_multiplication" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8">

                <ImageView
                    android:id="@+id/imageView_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onOneClick()}"
                    app:srcCompat="@drawable/ic_one" />

                <ImageView
                    android:id="@+id/imageView_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onTwoClick()}"
                    app:srcCompat="@drawable/ic_two" />

                <ImageView
                    android:id="@+id/imageView_three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onThreeClick()}"
                    app:srcCompat="@drawable/ic_three" />

<!--                <ImageView
                    android:id="@+id/imageView_subtraction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    app:srcCompat="@drawable/ic_subtraction" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_dot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onDotClick()}"
                    app:srcCompat="@drawable/ic_dot" />

                <ImageView
                    android:id="@+id/imageView_zero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onZeroClick()}"
                    app:srcCompat="@drawable/ic_zero" />

                <ImageView
                    android:id="@+id/imageView_clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:onClick="@{ () -> expenseViewModel.onClearClick()}"
                    app:srcCompat="@drawable/ic_clear" />

<!--                <ImageView
                    android:id="@+id/imageView_addition"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    app:srcCompat="@drawable/ic_addition" />-->
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>